--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ additional_links:
 about_title: About Me
 about_profile_image: images/profile.png
 about_content: |
-  Hi, my name's Joe and I'm a Senior Solutions Engineer with a proven track record of successfully filling hybrid roles that span solutions engineering, frontline support, and customer success engineering, with expertise in deploying complex security solutions and driving product adoption.
+  Hi, my name's Joe and I'm a Senior Solutions Engineer with a almost a decade of experience working in startups as a solutions engineer, while also contributing to frontline support and customer success engineering. I have expertise in deploying and driving product adoption with complex security solutions in both the SIEM and identity spaces.
   I have lead projects that include product research, customer analytics, establishing ETL pipelines, automated data generation for demo environments, and more.
 
 content:
